--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@
     --color-light-gray: #C4C4C4;
 
     --border-radius: 30px;
-    --border: 1px solid var(--color-light)
+    --border: 1px solid var(--color-light);
 
     --font-family-base: 'Heebo', sans-serif;
     --font-family-accent: 'Yantramanav', sans-serif;
@@ -259,7 +259,23 @@
     color: var(--color-light-gray);
     background-color: var(--color-dark);
  }
+
+ a,
+ button,
+ input,
+ textarea,
+ svg * {
+  transition-duration: var(--transition-duration);
+ }
  
+ a {
+  color: var(--color-light);
+ }
+
+ a:hover {
+  color: var(--color-light-gray);
+ }
+
  .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
   margin-inline: auto;
@@ -270,3 +286,133 @@
   font-weight: 700;
   text-transform: uppercase;
  }
+ 
+ .button {
+  display: inline-flex;
+  align-items: center;
+  height: 38px;
+  border: none;
+  border-radius: 30px;
+  padding-inline: 27px;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  background-color: var(--color-light);
+ }
+
+.button:hover {
+  background-color: var(--color-light-gray);
+}
+
+ .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 20px;
+  padding-inline: 32px;
+ }
+
+ .header-menu-logo {
+  flex-shrink: 0;
+ }
+
+.header-menu-list {
+ display: flex;
+ column-gap: 50px;
+ flex-wrap: wrap;
+}
+
+.header-menu-link {
+  display: inline-flex;
+  align-items: center;
+  height: 90px;
+  column-gap: 7px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: 1.2px;
+}
+
+.header-menu-link.is-current::after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  background-color: currentColor;
+  border-radius: 50%;
+}
+
+.header-actions {
+  display: flex;
+  column-gap: 40px;
+}
+
+.header-burger-button {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 4px;
+  width: 40px;
+  height: 40px;
+  padding-left: 8px;
+  color: var(--color-light);
+  background-color: transparent;
+  border: var(--border);
+  border-radius: var(--border-radius);
+}
+
+.header-burger-button:hover {
+  color: var(--color-light-gray);
+  border-color: currentColor;
+}
+
+.header-burger-button-line {
+  width: 6px;
+  height: 1px;
+  background-color: currentColor;
+  box-shadow: 15px 0 0 currentColor;
+}
+
+@media (max-width: 1000px) {
+  .header {
+    flex-wrap: wrap;
+    row-gap: 10px;
+    padding-top: 20px;
+    padding-inline: 15px;
+  }
+
+  .header-menu {
+    order: 1;
+    flex-basis: 100%;
+  }
+
+  .header-menu-link {
+    height: 50px;
+  }
+}
+
+@media (max-width: 700px) {
+  .button {
+    padding-inline: 15px;
+  }
+
+  .header {
+    padding-top: 10px;
+  }
+
+  .header-menu-link {
+    height: 30px;
+  }
+
+  .header-menu-list {
+    column-gap: 22px;
+}
+
+.header-actions {
+  column-gap: 15px;
+}
+
+}
