--- a/style.css
+++ b/style.css
@@ -233,6 +233,7 @@
 
  :root {
     --color-dark: #000000;
+    --color-dark-alternate: #131619;
     --color-light: #FFFFFF;
     --color-dark-gray: #404040;
     --color-light-gray: #C4C4C4;
@@ -249,6 +250,8 @@
     --container-padding-x: 15px;
 
     --transition-duration: 0.2s;
+
+    --header-height: 90px;
  }
 
  body {
@@ -282,9 +285,43 @@
   padding-inline: var(--container-padding-x);
  }
 
+ .visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
  h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   text-transform: uppercase;
+ }
+
+ .title-medium {
+  font-size: 40px;
+  color: var(--color-light);
+  line-height: 1.3;
+ }
+
+ .backdrop-title {
+  position: relative;
+  z-index: 2;
+ }
+
+ .backdrop-title::before {
+  content: '';
+  display: block;
+  position: absolute;
+  right: calc(100% + 8px);
+  width: 26px;
+  aspect-ratio: 1;
+  background: url('./icons/plus.svg') center/contain no-repeat;
  }
  
  .button {
@@ -312,7 +349,9 @@
   justify-content: space-between;
   align-items: center;
   column-gap: 20px;
+  min-height: var(--header-height);
   padding-inline: 32px;
+  background-color: var(--color-dark-alternate);
  }
 
  .header-menu-logo {
@@ -328,7 +367,7 @@
 .header-menu-link {
   display: inline-flex;
   align-items: center;
-  height: 90px;
+  height: var(--header-height);
   column-gap: 7px;
   text-decoration: none;
   text-transform: uppercase;
@@ -340,7 +379,7 @@
 .header-menu-link.is-current::after {
   content: "";
   width: 5px;
-  height: 5px;
+  aspect-ratio: 1;
   background-color: currentColor;
   border-radius: 50%;
 }
@@ -356,12 +395,12 @@
   justify-content: center;
   row-gap: 4px;
   width: 40px;
-  height: 40px;
+  aspect-ratio: 1;
   padding-left: 8px;
   color: var(--color-light);
   background-color: transparent;
   border: var(--border);
-  border-radius: var(--border-radius);
+  border-radius: 50%;
 }
 
 .header-burger-button:hover {
@@ -376,11 +415,108 @@
   box-shadow: 15px 0 0 currentColor;
 }
 
-@media (max-width: 1000px) {
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  min-height: calc(100vh - var(--header-height));
+  padding: 34px 70px;
+  color: var(--color-light);
+  background-color: var(--color-dark-alternate);
+}
+
+.banner-body {
+  text-transform: uppercase;
+}
+
+.banner-info {
+  display: flex;
+  align-items: end;
+  font-size: clamp(16px, 1.56vw, 30px);
+  line-height: 1.27;
+  font-weight: 700;
+}
+
+.banner-info::before {
+  content: '';
+  width: clamp(60px, 10.1vw, 194px);
+  aspect-ratio: 1;
+  background: url('./icons/bold-arrow-dow-right.svg') center/contain no-repeat;
+  margin-right: 30px;
+}
+
+.banner-title {
+  font-size: min(18.75vw, 360px);
+  line-height: 1;
+}
+
+.banner-pagination-list {
+  display: flex;
+  justify-content: center;
+}
+
+.banner-pagination-item {
+  display: flex;
+}
+
+.banner-pagination-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+  background-color: transparent;
+  border: none;
+  transition-duration: var(--transition-duration);
+}
+
+.banner-pagination-button::after {
+  content: '';
+  width: 10px;
+  aspect-ratio: 1;
+  border: var(--border);
+  border-radius: 50%;
+}
+
+.banner-pagination-button.is-current::after {
+  background-color: var(--color-light);
+}
+
+.banner-pagination-button:not(.is-current):hover::after {
+  border-color: var(--color-light-gray);
+}
+
+.motivation-item:nth-child(even) {
+  background-color: var(--color-dark-alternate);
+}
+
+.motivation-item:nth-child(even) .motivation-card {
+  flex-direction: row-reverse;
+}
+
+.motivation-card {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  column-gap: clamp(30px, 10.42vw, 200px);
+}
+
+.motivation-card-image {
+  margin-block: -60px;
+}
+
+.motivation-card-body {
+  padding-left: 35px;
+}
+
+@media (max-width: 1024px) {
   .header {
     flex-wrap: wrap;
     row-gap: 10px;
     padding-top: 20px;
+  }
+
+  .header,
+  .banner {
     padding-inline: 15px;
   }
 
@@ -392,9 +528,13 @@
   .header-menu-link {
     height: 50px;
   }
+
+  .banner {
+    row-gap: 10px;
+  }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 777px) {
   .button {
     padding-inline: 15px;
   }
@@ -413,6 +553,14 @@
 
 .header-actions {
   column-gap: 15px;
+}
+
+.banner-info {
+  margin-bottom: 5px;
+}
+
+.banner-info::before {
+  margin-right: 10px;
 }
 
 }
